--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -14,6 +14,13 @@ builds:
   - amd64
   binary: howbob
   id: howbob
+  ldflags:
+  - -s -w
+    -X "github.com/gkwa/howbob/version.Version={{ .Version }}"
+    -X "github.com/gkwa/howbob/version.Date={{ .CommitDate }}"
+    -X "github.com/gkwa/howbob/version.GoVersion={{ .Env.GOVERSION }}"
+    -X "github.com/gkwa/howbob/version.ShortGitSHA={{ .ShortCommit }}"
+    -X "github.com/gkwa/howbob/version.FullGitSHA={{ .FullCommit }}"
 archives:
 - format: tar.gz
   name_template: |-
@@ -39,8 +46,17 @@ changelog:
 brews:
 - name: howbob
   directory: Formula
-  homepage: https://github.com/taylormonacelli/homebrew-tools
+  homepage: https://github.com/gkwa/howbob
   repository:
-    owner: taylormonacelli
+    owner: gkwa
     name: homebrew-tools
     branch: main
+scoops:
+- name: howbob
+  homepage: https://github.com/gkwa/howbob
+  description: "Description of the howbob project"
+  license: MIT
+  repository:
+    owner: gkwa
+    name: scoop-bucket
+    branch: master
