--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,42 +2,42 @@ name: Build & Test
 "on":
   push:
     branches:
-    - '*'
+      - "*"
   pull_request:
     branches:
-    - '*'
+      - "*"
   schedule:
-  - cron: 01 13 * * SAT
+    - cron: 01 13 * * SAT
 jobs:
   build:
     strategy:
       matrix:
         os:
-        - ubuntu-latest
-        - macOS-latest
-        - windows-latest
+          - ubuntu-latest
+          - macOS-latest
+          - windows-latest
     runs-on: ${{ matrix.os }}
     name: Build & Test
     steps:
-    - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
-    - uses: actions/setup-go@3041bf56c941b39c61721a86cd11f3bb1338122a # v5
-      with:
-        go-version: '>=1.21.1'
-    - name: Set GOVERSION environment variable (Linux/macOS)
-      if: runner.os != 'Windows'
-      run: echo "GOVERSION=$(go version)" >> $GITHUB_ENV
-    - name: Set GOVERSION environment variable (Windows)
-      if: runner.os == 'Windows'
-      run: echo "GOVERSION=$(go version)" | Out-File -FilePath $env:GITHUB_ENV -Append
-    - name: Build & Test
-      run: |
-        go build -v
-        go test ./...
-    - name: Run GoReleaser
-      uses: goreleaser/goreleaser-action@9ed2f89a662bf1735a48bc8557fd212fa902bebf # v6
-      with:
-        args: release --snapshot --skip=publish --clean
-    - name: Colored Output Test
-      if: runner.os == 'Linux'
-      shell: script -q -e -c "bash {0}"
-      run: go run main.go -- main.go
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+      - uses: actions/setup-go@3041bf56c941b39c61721a86cd11f3bb1338122a # v5
+        with:
+          go-version: ">=1.21.1"
+      - name: Set GOVERSION environment variable (Linux/macOS)
+        if: runner.os != 'Windows'
+        run: echo "GOVERSION=$(go version)" >> $GITHUB_ENV
+      - name: Set GOVERSION environment variable (Windows)
+        if: runner.os == 'Windows'
+        run: echo "GOVERSION=$(go version)" | Out-File -FilePath $env:GITHUB_ENV -Append
+      - name: Build & Test
+        run: |
+          go build -v
+          go test ./...
+      - name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@9ed2f89a662bf1735a48bc8557fd212fa902bebf # v6
+        with:
+          args: release --snapshot --skip=publish --clean
+      - name: Colored Output Test
+        if: runner.os == 'Linux'
+        shell: script -q -e -c "bash {0}"
+        run: go run main.go -- main.go
